# image-rider

./: .gitignore  Cargo.toml  README.md
examples/: parser.rs
src/: config.rs  error.rs  file.rs  lib.rs  serialize.rs
src/disk_format/: d64.rs  image.rs  mod.rs  sanity_check.rs  stx.rs
src/disk_format/apple/: catalog.rs  disk.rs  mod.rs  nibble.rs
src/disk_format/commodore/: d64.rs  disk.rs  mod.rs
src/disk_format/stx/: disk.rs  mod.rs  sector.rs  track.rs
testdata/: README.md  vtoc.img
