[package]
name = "image-rider"
version = "0.2.1"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Disk image and ROM image parser"
keywords = ["filesystem", "terminal", "cli", "emu", "nom"]
readme = "README.md"
repository = "https://github.com/jgerrish/image-rider"
homepage = "https://github.com/jgerrish/image-rider"
license = "MIT"

[dependencies]
config = "0.12"
unicode-width = "0.1"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
rust-embed = "6.3"
toml = "0.5"
insta = "1.13"
nom = "7.1"
time = "0.3"
# clap-config-source = { version = "0.1.0", path = "../clap-config-source" }

[dev-dependencies]
pretty_assertions = "1.1"
# criterion = "0.3"
