[package]
name = "image-rider"
version = "0.7.1"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Disk image and ROM image parser"
keywords = ["filesystem", "terminal", "cli", "emu", "nom"]
readme = "README.md"
repository = "https://github.com/jgerrish/image-rider"
homepage = "https://github.com/jgerrish/image-rider"
license = "MIT"

[dependencies]
config = "0.13"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
toml = "0.5"
nom = "7.1"

[dev-dependencies]
pretty_assertions = "1.4"
