[package]
name = "image-rider"
version = "0.7.1"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Disk image and ROM image parser"
keywords = ["filesystem", "terminal", "cli", "emu", "nom"]
readme = "README.md"
repository = "https://github.com/jgerrish/image-rider"
homepage = "https://github.com/jgerrish/image-rider"
license = "MIT"

[dependencies]
config = "0.14"
# Clap 4.5 requires rustc 1.74 or newer
# While it's good practice to keep your toolchain up-to-date,
# I understand in some environments developer tooling teams need to
# thoroughly test toolchain releases for use in production.
# I hope this change to < 4.5 makes some lives easier and no 4.4 or
# rustc bugs pop up.
# Just a couple minutes saved.  It's swell.
clap = { version = "4.4, < 4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
nom = "7.1"

[dev-dependencies]
pretty_assertions = "1.4"
